--- a/recipes.html
+++ b/recipes.html
@@ -87,7 +87,7 @@
 
         <!-- Recipe 3: Spinach rice -->
         <div class="page">
-            <img src="images/spinach.jpg" alt="Spinach rice">
+            <img src="images/Spinach.jpg" alt="Spinach rice">
         </div>
         <div class="page">
             <h2>Spinach rice with yogurt curry</h2>
